<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_main"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/main" />

    <item
        android:id="@+id/nav_pay"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/paid" />

    <item
        android:id="@+id/nav_trans"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/trans" />

    <item
        android:id="@+id/nav_monitoring"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/monitoring" />

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/more" />
</menu>