<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/qqb_mobile"
    app:startDestination="@id/nav_splash">

  <fragment
        android:id="@+id/nav_main"
        android:name="uz.uzsoft.qqbtrans.ui.screen.MainFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/nav_pay"
        android:name="uz.uzsoft.qqbtrans.ui.screen.PayFragment"
        android:label="@string/paid"
        tools:layout="@layout/fragment_pay" />
    <fragment
        android:id="@+id/nav_trans"
        android:name="uz.uzsoft.qqbtrans.ui.screen.TransFragment"
        android:label="@string/trans"
        tools:layout="@layout/fragment_trans" />
    <fragment
        android:id="@+id/nav_monitoring"
        android:name="uz.uzsoft.qqbtrans.ui.screen.MonitoringFragment"
        android:label="@string/monitoring"
        tools:layout="@layout/fragment_monitoring" />
    <fragment
        android:id="@+id/nav_more"
        android:name="uz.uzsoft.qqbtrans.ui.screen.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_more" />
    <fragment
        android:id="@+id/nav_splash"
        android:name="uz.uzsoft.qqbtrans.ui.screen.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" />
  <fragment
      android:id="@+id/nav_login"
      android:name="uz.uzsoft.qqbtrans.ui.screen.LoginFragment"
      android:label="LoginFragment" />
  <fragment
      android:id="@+id/nav_registration"
      android:name="uz.uzsoft.qqbtrans.ui.screen.RegistrationFragment"
      android:label="fragment_registration"
      tools:layout="@layout/fragment_registration" />
</navigation>